# haskell-web-todos

./: .envrc.example  .gitignore  README.md  docker-compose.yml
api/: api.cabal  stack.yaml
api/app/: Main.hs
api/src/: Api.hs  Database.hs
api/src/Api/: Database.hs  Todo.hs  Types.hs
api/src/Api/Todo/: CreateParams.hs  Database.hs  Model.hs  Routes.hs  Todo.hs
api/src/Database/: Query.hs  URL.hs
api/src/Database/Configuration/: Connection.hs
api/test/: Spec.hs
database/: sqitch.plan
database/deploy/: todos.sql
database/revert/: todos.sql
database/verify/: todos.sql
scripts/db/: create
