name:                api
version:             0.1.0.0
synopsis:            learning
description:         learning
homepage:            https://github.com/githubuser/api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Database
                     , Api.Todo
                     , Api.Todo.CreateParams
                     , Api.Todo.Database
                     , Api.Todo.Routes
                     , Api.Todo.Todo
                     , Api.Types
                     , Database
                     , Database.Configuration.Connection
                     , Database.Query
                     , Database.URL
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-postgresql
                     , aeson
                     , iso8601-time
                     , mtl
                     , network-uri
                     , resource-pool
                     , scotty
                     , text
                     , time
                     , uuid
                     , warp
  default-language:    Haskell2010

executable api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , api
  default-language:    Haskell2010

test-suite api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/api
